--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,6 +107,8 @@
     "text_encoding": "cpp",
     "typeinfo": "cpp",
     "variant": "cpp",
-    "*.ipp": "cpp"
+    "*.ipp": "cpp",
+    "iostream": "cpp",
+    "istream": "cpp"
   }
 }
