Refactor .vscode settings and Order struct, and add OrderBook class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,10 @@
     "variant": "cpp",
     "*.ipp": "cpp",
     "iostream": "cpp",
-    "istream": "cpp"
+    "istream": "cpp",
+    "chrono": "cpp",
+    "ratio": "cpp",
+    "iomanip": "cpp",
+    "sstream": "cpp"
   }
 }
